--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,10 +10,8 @@
   "author": "Agustina Bellone, Escobar Joel, Delgado Jessica",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongodb": "^4.7.0",
-    "mongoose": "^6.4.0"
+    "uuid": "^8.3.2"
   }
 }
